Edit User Pages. Fixed profile picture alignment and friends tab.

--- a/itinerary_app/src/react-components/OtherUser/styles.css
+++ b/itinerary_app/src/react-components/OtherUser/styles.css
@@ -9,16 +9,12 @@
 .MuiAvatar-root.otheruser-avatar{
     margin-bottom: 30px;
     margin-top: 30px;
-    left: 46%;
+    left: 50%;
+    transform: translate(-50%);
     height: 190px;
     width: 190px;
     position: absolute;
     top: 250px;
-}
-
-.MuiAvatar-root.friend-avatar{
-    margin-top: 30px;
-    margin-bottom: 30px;
 }
 
 .MuiButtonGroup-root.user_button_group {
@@ -51,8 +47,4 @@
 
 .spacer{
     height: 80px;
-}
-
-.name-text{
-    text-emphasis: bold;
 }
