--- a/itinerary_app/src/react-components/User/styles.css
+++ b/itinerary_app/src/react-components/User/styles.css
@@ -9,16 +9,12 @@
 .MuiAvatar-root.user-avatar{
     margin-bottom: 30px;
     margin-top: 30px;
-    left: 46%;
+    left: 50%;
+    transform: translate(-50%);
     height: 190px;
     width: 190px;
     position: absolute;
     top: 250px;
-}
-
-.MuiAvatar-root.friend-avatar{
-    margin-top: 30px;
-    margin-bottom: 30px;
 }
 
 .MuiButtonGroup-root.user_button_group {
